XWIKI-7228: Fail to download extension file from XR when provided as URL